feat: 添加模型参数校验器。
